/cp 2015-08-22  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/63693
	* pt.c (resolve_typename_type): Use CLASSTYPE_PRIMARY_TEMPLATE_TYPE
	only on class types.

/testsuite
2015-08-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/63693
	* g++.dg/cpp0x/decltype63.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@227098 138bc75d-0d04-0410-961f-82ee72b054a4